tests/snapshots/tokenizer_elements__definition_flat_multiline_label.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Text(
            "Microservice",
        ),
        0..12,
    ),
    (
        Colon,
        12..13,
    ),
    (
        Newline,
        13..14,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    14..18,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "An",
        ),
        18..20,
    ),
    (
        Whitespace,
        20..21,
    ),
    (
        Text(
            "architectural",
        ),
        21..34,
    ),
    (
        Whitespace,
        34..35,
    ),
    (
        Text(
            "style",
        ),
        35..40,
    ),
    (
        Whitespace,
        40..41,
    ),
    (
        Text(
            "that",
        ),
        41..45,
    ),
    (
        Whitespace,
        45..46,
    ),
    (
        Text(
            "structures",
        ),
        46..56,
    ),
    (
        Whitespace,
        56..57,
    ),
    (
        Text(
            "applications",
        ),
        57..69,
    ),
    (
        Whitespace,
        69..70,
    ),
    (
        Text(
            "as",
        ),
        70..72,
    ),
    (
        Whitespace,
        72..73,
    ),
    (
        Text(
            "loosely",
        ),
        73..80,
    ),
    (
        Whitespace,
        80..81,
    ),
    (
        Text(
            "coupled",
        ),
        81..88,
    ),
    (
        Whitespace,
        88..89,
    ),
    (
        Text(
            "services",
        ),
        89..97,
    ),
    (
        Period,
        97..98,
    ),
    (
        Newline,
        98..99,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    99..100,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "Each",
        ),
        104..108,
    ),
    (
        Whitespace,
        108..109,
    ),
    (
        Text(
            "service",
        ),
        109..116,
    ),
    (
        Whitespace,
        116..117,
    ),
    (
        Text(
            "is",
        ),
        117..119,
    ),
    (
        Whitespace,
        119..120,
    ),
    (
        Text(
            "independently",
        ),
        120..133,
    ),
    (
        Whitespace,
        133..134,
    ),
    (
        Text(
            "deployable",
        ),
        134..144,
    ),
    (
        Whitespace,
        144..145,
    ),
    (
        Text(
            "and",
        ),
        145..148,
    ),
    (
        Whitespace,
        148..149,
    ),
    (
        Text(
            "scalable",
        ),
        149..157,
    ),
    (
        Period,
        157..158,
    ),
    (
        Newline,
        158..159,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    159..160,
                ),
            ],
        ),
        0..0,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
    (
        Text(
            "Something",
        ),
        160..169,
    ),
    (
        Whitespace,
        169..170,
    ),
    (
        Text(
            "to",
        ),
        170..172,
    ),
    (
        Whitespace,
        172..173,
    ),
    (
        Text(
            "finish",
        ),
        173..179,
    ),
    (
        Whitespace,
        179..180,
    ),
    (
        Text(
            "the",
        ),
        180..183,
    ),
    (
        Whitespace,
        183..184,
    ),
    (
        Text(
            "element",
        ),
        184..191,
    ),
    (
        Newline,
        191..192,
    ),
]
