tests/snapshots/tokenizer_elements__list_flat_simple_dash.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        Newline,
        5..6,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    6..7,
                ),
            ],
        ),
        0..0,
    ),
    (
        Dash,
        7..8,
    ),
    (
        Whitespace,
        8..9,
    ),
    (
        Text(
            "First",
        ),
        9..14,
    ),
    (
        Whitespace,
        14..15,
    ),
    (
        Text(
            "item",
        ),
        15..19,
    ),
    (
        Newline,
        19..20,
    ),
    (
        Dash,
        20..21,
    ),
    (
        Whitespace,
        21..22,
    ),
    (
        Text(
            "Second",
        ),
        22..28,
    ),
    (
        Whitespace,
        28..29,
    ),
    (
        Text(
            "item",
        ),
        29..33,
    ),
    (
        Newline,
        33..34,
    ),
    (
        Dash,
        34..35,
    ),
    (
        Whitespace,
        35..36,
    ),
    (
        Text(
            "Third",
        ),
        36..41,
    ),
    (
        Whitespace,
        41..42,
    ),
    (
        Text(
            "item",
        ),
        42..46,
    ),
    (
        Newline,
        46..47,
    ),
]
