tests/snapshots/tokenizer_elements__list_flat_simple_lettered.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        Newline,
        5..6,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    6..7,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "a",
        ),
        7..8,
    ),
    (
        Period,
        8..9,
    ),
    (
        Whitespace,
        9..10,
    ),
    (
        Text(
            "First",
        ),
        10..15,
    ),
    (
        Whitespace,
        15..16,
    ),
    (
        Text(
            "letter",
        ),
        16..22,
    ),
    (
        Whitespace,
        22..23,
    ),
    (
        Text(
            "item",
        ),
        23..27,
    ),
    (
        Newline,
        27..28,
    ),
    (
        Text(
            "b",
        ),
        28..29,
    ),
    (
        Period,
        29..30,
    ),
    (
        Whitespace,
        30..31,
    ),
    (
        Text(
            "Second",
        ),
        31..37,
    ),
    (
        Whitespace,
        37..38,
    ),
    (
        Text(
            "letter",
        ),
        38..44,
    ),
    (
        Whitespace,
        44..45,
    ),
    (
        Text(
            "item",
        ),
        45..49,
    ),
    (
        Newline,
        49..50,
    ),
    (
        Text(
            "c",
        ),
        50..51,
    ),
    (
        Period,
        51..52,
    ),
    (
        Whitespace,
        52..53,
    ),
    (
        Text(
            "Third",
        ),
        53..58,
    ),
    (
        Whitespace,
        58..59,
    ),
    (
        Text(
            "letter",
        ),
        59..65,
    ),
    (
        Whitespace,
        65..66,
    ),
    (
        Text(
            "item",
        ),
        66..70,
    ),
    (
        Newline,
        70..71,
    ),
]
