tests/snapshots/tokenizer_elements__list_flat_simple_numbered.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        Newline,
        5..6,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    6..7,
                ),
            ],
        ),
        0..0,
    ),
    (
        Number(
            "1",
        ),
        7..8,
    ),
    (
        Period,
        8..9,
    ),
    (
        Whitespace,
        9..10,
    ),
    (
        Text(
            "First",
        ),
        10..15,
    ),
    (
        Whitespace,
        15..16,
    ),
    (
        Text(
            "numbered",
        ),
        16..24,
    ),
    (
        Whitespace,
        24..25,
    ),
    (
        Text(
            "item",
        ),
        25..29,
    ),
    (
        Newline,
        29..30,
    ),
    (
        Number(
            "2",
        ),
        30..31,
    ),
    (
        Period,
        31..32,
    ),
    (
        Whitespace,
        32..33,
    ),
    (
        Text(
            "Second",
        ),
        33..39,
    ),
    (
        Whitespace,
        39..40,
    ),
    (
        Text(
            "numbered",
        ),
        40..48,
    ),
    (
        Whitespace,
        48..49,
    ),
    (
        Text(
            "item",
        ),
        49..53,
    ),
    (
        Newline,
        53..54,
    ),
    (
        Number(
            "3",
        ),
        54..55,
    ),
    (
        Period,
        55..56,
    ),
    (
        Whitespace,
        56..57,
    ),
    (
        Text(
            "Third",
        ),
        57..62,
    ),
    (
        Whitespace,
        62..63,
    ),
    (
        Text(
            "numbered",
        ),
        63..71,
    ),
    (
        Whitespace,
        71..72,
    ),
    (
        Text(
            "item",
        ),
        72..76,
    ),
    (
        Newline,
        76..77,
    ),
]
