tests/snapshots/tokenizer_elements__list_nested_mixed_content.snap
---
source: tests/tokenizer_elements.rs
expression: tokens.tokens()
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        Newline,
        5..6,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    6..7,
                ),
            ],
        ),
        0..0,
    ),
    (
        Dash,
        7..8,
    ),
    (
        Whitespace,
        8..9,
    ),
    (
        Text(
            "First",
        ),
        9..14,
    ),
    (
        Whitespace,
        14..15,
    ),
    (
        Text(
            "item",
        ),
        15..19,
    ),
    (
        Whitespace,
        19..20,
    ),
    (
        Text(
            "with",
        ),
        20..24,
    ),
    (
        Whitespace,
        24..25,
    ),
    (
        Text(
            "nested",
        ),
        25..31,
    ),
    (
        Whitespace,
        31..32,
    ),
    (
        Text(
            "content",
        ),
        32..39,
    ),
    (
        Newline,
        39..40,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    40..44,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "This",
        ),
        44..48,
    ),
    (
        Whitespace,
        48..49,
    ),
    (
        Text(
            "is",
        ),
        49..51,
    ),
    (
        Whitespace,
        51..52,
    ),
    (
        Text(
            "a",
        ),
        52..53,
    ),
    (
        Whitespace,
        53..54,
    ),
    (
        Text(
            "paragraph",
        ),
        54..63,
    ),
    (
        Whitespace,
        63..64,
    ),
    (
        Text(
            "nested",
        ),
        64..70,
    ),
    (
        Whitespace,
        70..71,
    ),
    (
        Text(
            "inside",
        ),
        71..77,
    ),
    (
        Whitespace,
        77..78,
    ),
    (
        Text(
            "the",
        ),
        78..81,
    ),
    (
        Whitespace,
        81..82,
    ),
    (
        Text(
            "list",
        ),
        82..86,
    ),
    (
        Whitespace,
        86..87,
    ),
    (
        Text(
            "item",
        ),
        87..91,
    ),
    (
        Period,
        91..92,
    ),
    (
        Newline,
        92..93,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    93..94,
                ),
            ],
        ),
        0..0,
    ),
    (
        Dash,
        98..99,
    ),
    (
        Whitespace,
        99..100,
    ),
    (
        Text(
            "Nested",
        ),
        100..106,
    ),
    (
        Whitespace,
        106..107,
    ),
    (
        Text(
            "list",
        ),
        107..111,
    ),
    (
        Whitespace,
        111..112,
    ),
    (
        Text(
            "item",
        ),
        112..116,
    ),
    (
        Whitespace,
        116..117,
    ),
    (
        Text(
            "one",
        ),
        117..120,
    ),
    (
        Newline,
        120..121,
    ),
    (
        Dash,
        125..126,
    ),
    (
        Whitespace,
        126..127,
    ),
    (
        Text(
            "Nested",
        ),
        127..133,
    ),
    (
        Whitespace,
        133..134,
    ),
    (
        Text(
            "list",
        ),
        134..138,
    ),
    (
        Whitespace,
        138..139,
    ),
    (
        Text(
            "item",
        ),
        139..143,
    ),
    (
        Whitespace,
        143..144,
    ),
    (
        Text(
            "two",
        ),
        144..147,
    ),
    (
        Newline,
        147..148,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    148..149,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "Another",
        ),
        153..160,
    ),
    (
        Whitespace,
        160..161,
    ),
    (
        Text(
            "paragraph",
        ),
        161..170,
    ),
    (
        Whitespace,
        170..171,
    ),
    (
        Text(
            "after",
        ),
        171..176,
    ),
    (
        Whitespace,
        176..177,
    ),
    (
        Text(
            "the",
        ),
        177..180,
    ),
    (
        Whitespace,
        180..181,
    ),
    (
        Text(
            "nested",
        ),
        181..187,
    ),
    (
        Whitespace,
        187..188,
    ),
    (
        Text(
            "list",
        ),
        188..192,
    ),
    (
        Period,
        192..193,
    ),
    (
        Newline,
        193..194,
    ),
    (
        BlankLine(
            [
                (
                    Newline,
                    194..195,
                ),
            ],
        ),
        0..0,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
    (
        Dash,
        195..196,
    ),
    (
        Whitespace,
        196..197,
    ),
    (
        Text(
            "Second",
        ),
        197..203,
    ),
    (
        Whitespace,
        203..204,
    ),
    (
        Text(
            "item",
        ),
        204..208,
    ),
    (
        Newline,
        208..209,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    209..213,
                ),
            ],
        ),
        0..0,
    ),
    (
        Text(
            "Final",
        ),
        213..218,
    ),
    (
        Whitespace,
        218..219,
    ),
    (
        Text(
            "paragraph",
        ),
        219..228,
    ),
    (
        Period,
        228..229,
    ),
    (
        Newline,
        229..230,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
]
