tests/snapshots/tokenizer_elements__list_nested_multiple_levels.snap
---
source: tests/tokenizer_elements.rs
expression: tokens
---
[
    (
        Text(
            "Test",
        ),
        0..4,
    ),
    (
        Colon,
        4..5,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        5..6,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        6..7,
    ),
    (
        Dash,
        7..8,
    ),
    (
        Whitespace,
        8..9,
    ),
    (
        Text(
            "First",
        ),
        9..14,
    ),
    (
        Whitespace,
        14..15,
    ),
    (
        Text(
            "outer",
        ),
        15..20,
    ),
    (
        Whitespace,
        20..21,
    ),
    (
        Text(
            "item",
        ),
        21..25,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        25..26,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    26..30,
                ),
            ],
        ),
        0..0,
    ),
    (
        Dash,
        30..31,
    ),
    (
        Whitespace,
        31..32,
    ),
    (
        Text(
            "First",
        ),
        32..37,
    ),
    (
        Whitespace,
        37..38,
    ),
    (
        Text(
            "nested",
        ),
        38..44,
    ),
    (
        Whitespace,
        44..45,
    ),
    (
        Text(
            "item",
        ),
        45..49,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        49..50,
    ),
    (
        Dash,
        54..55,
    ),
    (
        Whitespace,
        55..56,
    ),
    (
        Text(
            "Second",
        ),
        56..62,
    ),
    (
        Whitespace,
        62..63,
    ),
    (
        Text(
            "nested",
        ),
        63..69,
    ),
    (
        Whitespace,
        69..70,
    ),
    (
        Text(
            "item",
        ),
        70..74,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        74..75,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        75..76,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
    (
        Dash,
        76..77,
    ),
    (
        Whitespace,
        77..78,
    ),
    (
        Text(
            "Second",
        ),
        78..84,
    ),
    (
        Whitespace,
        84..85,
    ),
    (
        Text(
            "outer",
        ),
        85..90,
    ),
    (
        Whitespace,
        90..91,
    ),
    (
        Text(
            "item",
        ),
        91..95,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        95..96,
    ),
    (
        Indent(
            [
                (
                    Indentation,
                    96..100,
                ),
            ],
        ),
        0..0,
    ),
    (
        Dash,
        100..101,
    ),
    (
        Whitespace,
        101..102,
    ),
    (
        Text(
            "Another",
        ),
        102..109,
    ),
    (
        Whitespace,
        109..110,
    ),
    (
        Text(
            "nested",
        ),
        110..116,
    ),
    (
        Whitespace,
        116..117,
    ),
    (
        Text(
            "item",
        ),
        117..121,
    ),
    (
        BlankLine(
            Some(
                "\n",
            ),
        ),
        121..122,
    ),
    (
        Dedent(
            [],
        ),
        0..0,
    ),
]
